# ProDjango

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: master.yml  pr.yml
core/: conftest.py
core/accounts/: consumers.py  routing.py
core/accounts/managers/: account.py
core/accounts/models/: account.py
core/accounts/tests/fixtures/: accounts.py
core/accounts/views/: account.py
core/authentication/serializers/: login.py
core/authentication/views/: login.py
core/blocks/models/: block.py
core/blocks/serializers/: block.py
core/blocks/views/: block.py
core/comments/: apps.py
core/comments/models/: comment.py
core/comments/serializers/: comment.py
core/comments/views/: comment.py
core/config/: models.py  serializers.py  views.py
core/core/utils/: collections.py  misc.py
core/general/: authentication.py  balance.py
core/project/: settings.py  urls.py
core/project/settings/: __init__.py  base.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
core/recipes/: apps.py
core/recipes/models/: recipe.py
core/recipes/serializers/: recipe.py
core/recipes/views/: recipe.py  withdraw.py
local/: settings.dev.py
project/: settings.py
scripts/: entrypoint.sh  production_data.py
