[tool.poetry]
name = "prodjango"
version = "0.1.0"
description = "Poetry project in django: Tutorial by Bucky Roberts"
authors = ["George-Kibe <georgekibewambui@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
django-filter = "^23.2"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pydantic = "^2.1.1"
pynacl = "^1.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
colorlog = "^6.7.0"

[tool.isort]
multi_line_output = 5
line_length = 119


[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
